--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -35,3 +35,20 @@ height: 200px;
     background-color: #04AA6D;
     color: white;
   }
+
+  .form-add-new{
+    width: 500px;
+    margin: 0 auto;
+    padding-top:100px ;
+
+
+  }
+
+  .input-group{
+    padding:10px ;
+  }
+
+  button{
+    margin: 10px;
+    cursor: pointer;
+  }
