--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -5,12 +5,71 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
+<style>
+    .table-cotainer {
+       padding: 15px 20px;
+    }
+    .title{
+        font-size: 25px;
+        font-weight: 600;
+        padding-bottom: 10px;
+    }
+    table {
+        width: 100%;
+        border-collapse: collapse;
+    }
+    th,td{
+        padding: 8px;
+        text-align: left;
+        border-bottom: 1px solid #ddd;
+    }
+    tr:hover {
+        background-color: #ccc;
+    }
+</style>
 <body>
     <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a class="active" href="/">Home</a>
+        <a href="/create">Create Users:</a>
+
       </div>
+      <div class="table-container">
+    
+        <div class="title">List Users</div>
+        <table >
+            <tr>
+              <th>ID</th>
+              <th>Email</th>
+              <th>Name</th>
+              <th>City</th>
+              <th>Actions</th>
+            </tr>
+            <!-- <% for(let i= 0; i< listUsers.length; i++){ %>
+                <tr>
+                  <td><%= listUsers[i].id %></td>
+                  <td><%= listUsers[i].email %></td>
+                  <td><%= listUsers[i].name %></td>
+                  <td><%= listUsers[i].city %></td>
+                  <td>
+                    <button>Edit</button>
+                    <button>Delete</button>
+                  </td>
+                </tr>
+                <% } %> -->
+                <% listUsers.forEach(function(user,index) { %>
+                    <tr>
+                        <td><%= user.id %></td>
+                        <td><%= user.email %></td>
+                        <td><%= user.name %></td>
+                        <td><%= user.city %></td>
+                        <td>
+                          <button>Edit</button>
+                          <button>Delete</button>
+                        </td>
+                      </tr>
+                      <% }); %>
+            </table>
+      </div>
+     
 </body>
 </html>
